--- a/package.json
+++ b/package.json
@@ -47,8 +47,8 @@
 		"@wordpress/scripts": "^26.11.0",
 		"clean-webpack-plugin": "^4.0.0",
 		"eslint-import-resolver-webpack": "^0.13.2",
-		"extends": "link:@babel/runtime/helpers/extends",
-		"node-sass": "^7.0.3",
+		"node-sass": "^9.0.0",
+		"prettier": "^3.3.2",
 		"prop-types": "^15.8.1",
 		"webpack": "^5.88.2"
 	},
@@ -62,11 +62,11 @@
 		}
 	},
 	"dependencies": {
+		"@ariakit/react": "^0.4.7",
 		"classnames": "^2.3.2",
 		"fast-deep-equal": "^3.1.3",
 		"js-cookie": "^3.0.5",
 		"react-transition-group": "^4.4.5",
-		"reakit": "^1.3.11",
 		"seedrandom": "^3.0.5",
 		"uuid": "^9.0.0"
 	},
